--- a/ClimbingCombat/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ClimbingCombat/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -20,6 +20,7 @@ MaterialQualityLevel=1
 PreviewFeatureLevel=3
 PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
@@ -142,12 +143,15 @@ CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/HealthSystem/Damager
-MRUItem1=/Game/VirtualRealityBP/Blueprints/MotionControllerPawn
-MRUItem2=/Game/UIAssets/GameHUD
-MRUItem3=/Game/UIAssets/HeartWidget
-MRUItem4=/Game/UIAssets/Heart-filled_Mat
-MRUItem5=/Game/UIAssets/heart-filled
-MRUItem6=/Game/VirtualRealityBP/Maps/MotionControllerMap
+MRUItem1=/Game/VirtualRealityBP/Blueprints/BP_MotionController
+MRUItem2=/Game/VirtualRealityBP/Blueprints/HMDLocomotionPawn
+MRUItem3=/Game/HealthSystem/GameHUD
+MRUItem4=/Game/VirtualRealityBP/Blueprints/MotionControllerPawn
+MRUItem5=/Game/VirtualRealityBP/Maps/MotionControllerMap
+MRUItem6=/Game/UIAssets/GameHUD
+MRUItem7=/Game/UIAssets/HeartWidget
+MRUItem8=/Game/UIAssets/Heart-filled_Mat
+MRUItem9=/Game/UIAssets/heart-filled
 
 [DetailCategories]
 MotionControllerPawn_C.TransformCommon=True
@@ -373,6 +377,28 @@ K2Node_FunctionEntry.GraphNodeDetail=True
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
+HMDLocomotionPawn_C.Default=True
+HMDLocomotionPawn_C.Tick=True
+HMDLocomotionPawn_C.Pawn=True
+HMDLocomotionPawn_C.Camera=True
+HMDLocomotionPawn_C.Rendering=True
+HMDLocomotionPawn_C.Replication=True
+HMDLocomotionPawn_C.Collision=True
+HMDLocomotionPawn_C.Input=True
+HMDLocomotionPawn_C.Actor=True
+BP_MotionController_C.Tick=True
+BP_MotionController_C.Default=True
+BP_MotionController_C.Rendering=True
+BP_MotionController_C.Replication=True
+BP_MotionController_C.Collision=True
+BP_MotionController_C.Input=True
+BP_MotionController_C.Actor=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -382,8 +408,8 @@ Visual=
 Object=
 
 [RootWindow]
-ScreenPosition=X=-199.200 Y=51.200
-WindowSize=X=1283.200 Y=723.200
+ScreenPosition=X=120.800 Y=64.800
+WindowSize=X=1284.800 Y=724.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1203,6 +1229,8 @@ FrameNumberDisplayFormat=Seconds
 /Game/HealthSystem/GameHUD.GameHUD=1
 /Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn=1
 /Game/HealthSystem/Damager.Damager=1
+/Game/VirtualRealityBP/Blueprints/HMDLocomotionPawn.HMDLocomotionPawn=1
+/Game/VirtualRealityBP/Blueprints/BP_MotionController.BP_MotionController=1
 
 [MaterialEditor]
 PrimType=1
